# ML

./: .gitignore  pyproject.toml
Lab1/: Metryki_klasyfikacja.ipynb  Metryki_regresja.ipynb  Podstawowe zasady (Scikit-learn).ipynb
Lab1/Data/: Dataset - Bikes.xlsx
